[gd_scene load_steps=6 format=3 uid="uid://g87bmm5uj5nv"]

[ext_resource type="Theme" uid="uid://d07uvqy4uuw8q" path="res://assets/ingametheme.tres" id="1_fyqef"]
[ext_resource type="Script" uid="uid://cfl8ktt67bejy" path="res://Scripts/fight_controller.gd" id="1_m6e0p"]
[ext_resource type="PackedScene" uid="uid://c1p0bv38efl15" path="res://UI/sfx_manager.tscn" id="3_1cjj4"]
[ext_resource type="Script" uid="uid://c4mexevbom4fi" path="res://Scripts/in_fight_item_list.gd" id="3_ytuys"]
[ext_resource type="Script" uid="uid://oicwq4q3ov6a" path="res://scripts/spell_list.gd" id="4_1racq"]

[node name="FightController" type="CanvasLayer"]
script = ExtResource("1_m6e0p")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_fyqef")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Control" type="Control" parent="Control/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ActionsMenu" type="HBoxContainer" parent="Control/MarginContainer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="AttackButton" type="Button" parent="Control/MarginContainer/Control/ActionsMenu"]
layout_mode = 2
text = "ATTACK"

[node name="SpellsButton" type="Button" parent="Control/MarginContainer/Control/ActionsMenu"]
layout_mode = 2
text = "SPELLS"

[node name="ItemsButton" type="Button" parent="Control/MarginContainer/Control/ActionsMenu"]
layout_mode = 2
text = "ITEM"

[node name="CoverButton" type="Button" parent="Control/MarginContainer/Control/ActionsMenu"]
layout_mode = 2
disabled = true
text = "COVER"

[node name="RunButton" type="Button" parent="Control/MarginContainer/Control/ActionsMenu"]
layout_mode = 2
disabled = true
text = "RUN"

[node name="ItemList" type="ItemList" parent="Control/MarginContainer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -95.0
offset_right = 150.0
grow_vertical = 0
allow_reselect = true
auto_width = true
auto_height = true
item_count = 3
item_0/text = "Item 1"
item_1/text = "Item 2"
item_2/text = "Item 3"
script = ExtResource("3_ytuys")

[node name="SpellList" type="ItemList" parent="Control/MarginContainer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -95.0
offset_right = 150.0
grow_vertical = 0
allow_reselect = true
auto_width = true
auto_height = true
item_count = 3
item_0/text = "Item 1"
item_1/text = "Item 2"
item_2/text = "Item 3"
script = ExtResource("4_1racq")

[node name="ExitButton" type="Button" parent="Control/MarginContainer/Control"]
layout_mode = 1
offset_right = 8.0
offset_bottom = 8.0
text = "EXIT"

[node name="SfxManager" parent="." instance=ExtResource("3_1cjj4")]

[connection signal="pressed" from="Control/MarginContainer/Control/ActionsMenu/AttackButton" to="." method="_on_action_button_pressed" binds= [0]]
[connection signal="pressed" from="Control/MarginContainer/Control/ActionsMenu/SpellsButton" to="." method="_on_action_button_pressed" binds= [1]]
[connection signal="pressed" from="Control/MarginContainer/Control/ActionsMenu/ItemsButton" to="." method="_on_action_button_pressed" binds= [2]]
[connection signal="pressed" from="Control/MarginContainer/Control/ActionsMenu/CoverButton" to="." method="_on_action_button_pressed" binds= [3]]
[connection signal="pressed" from="Control/MarginContainer/Control/ActionsMenu/RunButton" to="." method="_on_action_button_pressed" binds= [4]]
[connection signal="item_selected" from="Control/MarginContainer/Control/ItemList" to="Control/MarginContainer/Control/ItemList" method="_on_item_selected"]
[connection signal="item_selected" from="Control/MarginContainer/Control/SpellList" to="Control/MarginContainer/Control/SpellList" method="_on_item_selected"]
[connection signal="pressed" from="Control/MarginContainer/Control/ExitButton" to="." method="_on_exit_button_pressed"]
